// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertType should detect incorrect types 1`] = `
"
file:1:1: Not a valid type
1
^"
`;

exports[`convertType should detect incorrect types 2`] = `
"
file:1:1: Not a valid type
\\"hello\\"
^"
`;

exports[`convertType should detect incorrect types 3`] = `
"
file:1:2: Not a valid type
(1 2 3)
-^"
`;

exports[`convertType should detect incorrect types 4`] = `
"
file:1:2: Not a valid type
(\\"hello\\" \\"world\\")
-^"
`;

exports[`convertType should read extensible record 1`] = `
Object {
  "args": Array [
    Object {
      "type": Object {
        "extends": Object {
          "type": Object {
            "extends": Object {
              "type": Object {
                "name": "a",
                "tag": "type-variable",
                "userSpecified": false,
              },
            },
            "label": ":y",
            "labelType": Object {
              "type": Object {
                "name": "number",
                "tag": "constant",
              },
            },
            "tag": "row-extension",
          },
        },
        "label": ":x",
        "labelType": Object {
          "type": Object {
            "name": "number",
            "tag": "constant",
          },
        },
        "tag": "row-extension",
      },
    },
  ],
  "op": Object {
    "type": Object {
      "name": "record",
      "tag": "constant",
    },
  },
  "tag": "application",
}
`;
